--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             </div>
             <div class="h-educacao">
-                    <div class="titel-educacao">
+                    <div class="h-title-educacao">
                         <h2>Educacao</h2>
                 </div>
                 <div class="item">
