adicionando novos talentos meus

--- a/index.html
+++ b/index.html
@@ -326,6 +326,25 @@
 
             <div class="item">
                 <div class="title">
+                    <h2>ajax jquery</h2>
+                </div>
+                <div class="icon">
+                    <div class="percentual-10"></div>
+                </div>  
+            </div>
+
+            
+            <div class="item">
+                <div class="title">
+                    <h2>Ajax</h2>
+                </div>
+                <div class="icon">
+                    <div class="percentual-10"></div>
+                </div>  
+            </div>
+
+            <div class="item">
+                <div class="title">
                     <h2>Trabalho em equipe</h2>
                 </div>
                 <div class="icon">
